--- a/O Matador de Monstros/index.html
+++ b/O Matador de Monstros/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
     <title>Matador de Monstro</title>
@@ -16,7 +17,7 @@
                         :class="{danger: playerlife < 20}"
                         :style="{width: playerlife + '%'}"></div>
                 </div>
-                <div> {{ playerlife }}% </div>
+                <div>{{ playerlife }}%</div>
             </div>
             <div class="score">
                 <h1>Monstro</h1>
@@ -25,34 +26,26 @@
                         :class="{danger: monsterlife < 20}"
                         :style="{width: monsterlife + '%'}"></div>
                 </div>
-                <div> {{ monsterlife }}% </div>
+                <div>{{ monsterlife }}%</div>
             </div>
         </div>
-        <div v-if= "hasResult" class="panel result">
+        <div v-if="hasResult" class="panel result">
             <div v-if="monsterlife < playerlife" class="win">Você ganhou!</div>
             <div v-else-if="playerlife < monsterlife" class="lose">Você perdeu!</div>
-            <div v-else> Empatou!</div>
+            <div v-else>Empatou!</div>
         </div>
         <div class="panel buttons">
             <template v-if="running">
-                <button @click = "attack(false)" 
-                    class="btn attack">Ataque</button>
-                <button @click = "attack(true)"
-                    class="btn especial-attack">Ataque Especial</button>
-                <button @click = "healAndHurt" 
-                    class="btn heal">Curar</button>
-                <button @click = "running = false"
-                    class="btn give-up">Desistir</button>
+                <button @click="attack(false)" class="btn attack">Ataque</button>
+                <button @click="attack(true)" class="btn especial-attack">Ataque Especial</button>
+                <button @click="healAndHurt" class="btn heal">Curar</button>
+                <button @click="running = false" class="btn give-up">Desistir</button>
             </template>
-            <button v-else @click="startGame" 
-                class="btn new-game">Iniciar Jogo</button>
+            <button v-else @click="startGame" class="btn new-game">Iniciar Jogo</button>
         </div>
-        <div v-if="logs.length" 
-            class="panel logs">
+        <div v-if="logs.length" class="panel logs">
             <ul>
-                <li v-for="log in logs"
-                    :class="log.cls"
-                    class="log"> {{ log.text }}</li>
+                <li v-for="log in logs" :class="log.cls" class="log">{{ log.text }}</li>
             </ul>       
         </div>
     </div>
